--- a/index.html
+++ b/index.html
@@ -37,51 +37,56 @@
 
         <div class="cont">
             <br><br>
-            <section id="Introduction">
-                <h3>&emsp;About Me</h3>
-                <p>Hello there! I'm Jeremiah Benjamin A. Gomez, an 18-year-old aspiring programmer originally from Muscat, Oman. Currently, I'm living in the vibrant PHIL. I am passionate about coding and technology, always eager to learn and explore new challenges in the world of programming.
-                </h3>
+            <section class="intro" id="Introduction">
+                <div class="sub"><h3 class="subt">About Me</h3></div><br>
+                <img class="Me" src="./img/ProfilePic.jpg" alt="ME"> 
+                <h3 class="Hello">Hello there! I'm Jeremiah Benjamin A. Gomez, an 18-year-old aspiring programmer originally from Muscat, Oman. Currently, I'm currently living in the Philippines. I am passionate about coding and technology, always eager to learn and explore new challenges in the world of programming.</h3>
                 <!--<img class="pp" src="./img/ProfilePic.jpg" alt="Profile Picture">-->
 
             </section>
 
             <section id="Skills">
-                <h3>&emsp;My Skills</h3>
-                <p>I am proficient in all programming languages, making me a versatile and adaptable developer. From front-end to back-end, I enjoy crafting elegant and efficient solutions to complex problems. My skills include but are not limited to:</h3>
-                <ul>
-                    <li>Python</li><br>
-                    <li>Java</li><br>
-                    <li>JavaScript</li><br>
-                    <li>HTML</li><br>
-                    <li>CSS</li><br>
-                    <li>SQL</li><br>
-                    <li>Ruby</li><br>
-                    <li>PHP</li><br>
-                    <li>C++</li><br>
+                <div class="sub"><h3 class="subt">My Skills</h3></div>
+                <ul class="skillLogos">
+                    <li><img class="programminglogo" src="./img/Python.png" alt="Python">&emsp;Python</li><br>
+                    <li><img class="programminglogo" src="./img/Java.png" alt="Java">&emsp;Java</li><br>
+                    <li><img class="programminglogo" src="./img/JS.png" alt="JavaScript">&emsp;JavaScript</li><br>
+                    <li><img class="programminglogo" src="./img/html.png" alt="html">&emsp;HTML</li><br>
+                    <li><img class="programminglogo" src="./img/Css.png" alt="css">&emsp;CSS</li><br>
+                    <li><img class="programminglogo" src="./img/SQL.png" alt="SQL">&emsp;SQL</li><br>
+                    <li><img class="programminglogo" src="./img/Ruby.png" alt="Ruby">&emsp;Ruby</li><br>
+                    <li><img class="programminglogo" src="./img/PHP.png" alt="PHP">&emsp;PHP</li><br>
+                    <li><img class="programminglogo" src="./img/C++.png" alt="C++">&emsp;C++</li><br>
                 </ul>
-                <p>These skills enable me to tackle a wide range of projects and contribute effectively to any development team.
-                </h3>
+                <h3 class="skilltxt">I am proficient in all programming languages, making me a versatile and adaptable developer. From front-end to back-end, I enjoy crafting elegant and efficient solutions to complex problems. The Following are skills i am currently knowledgable on. These skills enable me to tackle a wide range of projects and contribute effectively to any development team.</h3>
             </section>
 
-            <section id="Education">
-                <h3>&emsp;Education</h3>
-                <p>I believe in the power of continuous learning. Although my formal education journey is just beginning, I am committed to staying ahead in the tech world. Stay tuned for updates on my educational achievements!
-                </h3>
+            <section id="Education">2
+                <div class="sub"><h3 class="subt">Education</h3></div>
+                <h3 class="educationtxt`
+                ">I believe in the power of continuous learning. Although my formal education journey is just beginning, I am committed to staying ahead in the tech world. Stay tuned for updates on my educational achievements!</h3>
             </section>
             <section id="projects">
-                <h3>My Projects</h3>
+                <div class="sub"><h3 class="subt">My Projects</h3></div><br>
+
+                <div class="card"><br>
+                    <section class="inside first">
+                        <img class="projectPic" src="" alt="project1">
+                        <p class="projectText">test</p>
+                    </section>
+                    <a id="projectbtn" href="youtube.com" target="_blank">Project Name</a>
+                </div>
             </section>
 
-
             <section id="Contact">
-                <h3>Contact Information</h3>
-                <p>Feel free to reach out to me through the following channels:</h3>
+                <div class="sub"><h3 class="subt">Contact Information</h3></div>
+                <h3>Feel free to reach out to me through the following channels:</h3>
                 <ul>
-                    <li>Phone: </li>
-                    <li>Email: </li>
-                    <li>Facebook: </li>
+                    <li>Phone: +63 916 426 4045</li>
+                    <li>Email: Jeremiahbnjabgmz@gmail.com</li>
+                    <li>Facebook: <a href="https://web.facebook.com/jeremiah.gomez.3150">Jeremiah Gomez</a></li>
                 </ul>
-                <p>And finally, check out my projects through my github profile</h3>
+                <h3>And finally, check out my projects through my github profile</h3>
                 <a id="profile-link" href="https://github.com/Jeroez/CIT142H.git" target="_blank">My GitHub Profile</a>
             </section>
         
