--- a/index.html
+++ b/index.html
@@ -61,20 +61,73 @@
                 <h3 class="skilltxt">I am proficient in all programming languages, making me a versatile and adaptable developer. From front-end to back-end, I enjoy crafting elegant and efficient solutions to complex problems. The Following are skills i am currently knowledgable on. These skills enable me to tackle a wide range of projects and contribute effectively to any development team.</h3>
             </section>
 
-            <section id="Education">2
+            <section id="Education">
                 <div class="sub"><h3 class="subt">Education</h3></div>
-                <h3 class="educationtxt`
-                ">I believe in the power of continuous learning. Although my formal education journey is just beginning, I am committed to staying ahead in the tech world. Stay tuned for updates on my educational achievements!</h3>
+                <h3 class="educationtxt">I believe in the power of continuous learning. Although my formal education journey is just beginning, I am committed to staying ahead in the tech world. Stay tuned for updates on my educational achievements!</h3>
+                <h3 class="educationtxt">Studied at:</h3>
+                <div class="SLSM card">
+                    <section class="inside">
+                        <img class="schoolpic" src="./img/SLSM Logo.jpg" alt="SLSM">
+                       <p class="SchoolName"><b>SriLankan School Muscat</b></p>
+                    </section>
+                </div>
+                <div class="ABC card">
+                    <section class="inside">
+                        <img class="schoolpic" src="./img/pabcf LOGO.jpg" alt="pabcf">
+                       <p class="SchoolName"><b>SriLankan School Muscat</b></p>
+                    </section>
+                </div>
+                <div class="UC card">
+                    <section class="inside">
+                        <img class="schoolpic" src="./img/UC Logo.jpg" alt="uc">
+                       <p class="SchoolName"><b>Sri Lankan School Muscat</b></p>
+                    </section>
+                </div>
+
+                <!--Continue HERE-->
+
             </section>
             <section id="projects">
                 <div class="sub"><h3 class="subt">My Projects</h3></div><br>
+                
+                <div class="card"><br>
+                    <section class="inside first">
+                        <img class="kiana" src="./img/ProjectKiana.jpg" alt="project1">
+                        <p class="projectText"><b>Kiana Kaslana</b></p>
+                    </section>
+                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                </div>
 
                 <div class="card"><br>
                     <section class="inside first">
-                        <img class="projectPic" src="" alt="project1">
-                        <p class="projectText">test</p>
+                        <img class="Mei" src="" alt="project1">
+                        <p class="projectText"><b>Kiana Kaslana</b></p>
                     </section>
-                    <a id="projectbtn" href="youtube.com" target="_blank">Project Name</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                </div>
+
+                <div class="card"><br>
+                    <section class="inside first">
+                        <img class="Bronya" src="" alt="project1">
+                        <p class="projectText"><b>Bronya Zaychik</b></p>
+                    </section>
+                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                </div>
+
+                <div class="card"><br>
+                    <section class="inside first">
+                        <img class="Hua" src="" alt="project1">
+                        <p class="projectText"><b>Fu Hua</b></p>
+                    </section>
+                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                </div>
+
+                <div class="card"><br>
+                    <section class="inside first">
+                        <img class="Durandal" src="" alt="project1">
+                        <p class="projectText"><b>Durandal</b></p>
+                    </section>
+                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
                 </div>
             </section>
 
