--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
     <title>My Portfolio</title>
 </head>
 <body>
-    <nav id="navigation">
-        <ul>
-            <li class="navi"><a href="#Introduction">About Me</a></li>
-            <li class="navi"><a href="#Skills">Skills</a></li>
-            <li class="navi"><a href="#Education">Education</a></li>
-            <li class="navi"><a href="#projects">My Projects</a></li>
-            <li class="navi"><a href="#Contact">Contact Information</a></li>
-        </ul>
-    </nav>
     <nav id="navbar">
         <ul>
             <li class="home"><a href="#Home"><img class="logo" src="./img/Logo.png" alt="Home"></a></li><br>
@@ -30,24 +21,43 @@
     </nav>
     
 
-    <div class="Main">
-        <section id="Home">
-            <img class="Homepic" src="./img/home.jpg" alt="home pic">
-            <h1 class="tit">Gomez Online Portfolio</h1>
+    
+    <section id="Home">
+        <a href="#Entrance">
+            <img src="./img/Door.png" alt="door" class="door">
+        </a>
+        <img class="Homepic" src="./img/House.png" alt="home pic">        
+    </section>
+
+        <section id="Entrance">
+            <a href="#Introduction">
+                <img class="AboutEnt" src="./img/AboutEnt.png" alt="">
+            </a>
+            <a href="#Education">
+                <img class="endoor" src="./img/entranceDoor1.png" alt="">
+            </a>
+
+            <!--^TP parts above here^-->
+            <img class="ent" src="./img/entrance.png" alt="">     
         </section>
 
+
+    <div class="Main">
         <div class="cont">
             <br><br>
             <section class="intro" id="Introduction">
-                <div class="sub"><h3 class="subt">About Me</h3></div><br>
-                <img class="Me" src="./img/ProfilePic.jpg" alt="ME"> 
-                <h3 class="Hello">Hello there! I'm Jeremiah Benjamin A. Gomez, an 18-year-old aspiring programmer originally from Muscat, Oman. Currently, I'm currently living in the Philippines. I am passionate about coding and technology, always eager to learn and explore new challenges in the world of programming.</h3>
-                <!--<img class="pp" src="./img/ProfilePic.jpg" alt="Profile Picture">-->
+                <div class="sub">
+                    <h3 class="subt">About Me</h3>
+                </div>
+                <br>
+                <img class="Me" src="./img/ProfilePic.png" alt="ME"> 
+                <h3 class="Hello">Hello there! I'm Jeremiah Benjamin A. Gomez, an 18-year-old programmer in learning, Born in Muscat, Oman. I'm currently living in the Philippines. I am passionate about coding and technology, always eager to learn and explore new challenges in the world of programming.</h3>
 
+               <img class="aboutBG" src="./img/About.png" alt=""><br><br>
             </section>
 
             <section id="Skills">
-                <div class="sub"><h3 class="subt">My Skills</h3></div>
+                <div class="sub ski"><h3 class="subt">My Skills</h3></div>
                 <ul class="skillLogos">
                     <li><img class="programminglogo" src="./img/Python.png" alt="Python">&emsp;Python</li><br>
                     <li><img class="programminglogo" src="./img/Java.png" alt="Java">&emsp;Java</li><br>
@@ -99,36 +109,36 @@
                     <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
                 </div>
 
-                <div class="card"><br>
-                    <section class="inside first">
+                <div class="card first"><br>
+                    <section class="inside">
                         <img class="Mei" src="" alt="project1">
-                        <p class="projectText"><b>Kiana Kaslana</b></p>
+                        <p class="projectText"><b>Raiden Mei</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/RaidenMei         /" >Visit Page</a>
                 </div>
 
-                <div class="card"><br>
-                    <section class="inside first">
+                <div class="card second"><br>
+                    <section class="inside">
                         <img class="Bronya" src="" alt="project1">
                         <p class="projectText"><b>Bronya Zaychik</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/BronyaZaychik/" >Visit Page</a>
                 </div>
 
-                <div class="card"><br>
-                    <section class="inside first">
+                <div class="card third"><br>
+                    <section class="inside">
                         <img class="Hua" src="" alt="project1">
                         <p class="projectText"><b>Fu Hua</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/FuHua/" >Visit Page</a>
                 </div>
 
-                <div class="card"><br>
-                    <section class="inside first">
+                <div class="card fourth"><br>
+                    <section class="inside">
                         <img class="Durandal" src="" alt="project1">
                         <p class="projectText"><b>Durandal</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/Durandal/" >Visit Page</a>
                 </div>
             </section>
 
