update to project links

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <img class="project Mei" src="./img/ProjectMei.png" alt="project1">
                         <p class="projectText"><b>Raiden Mei</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/RaidenMei/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/Raiden-Mei//" >Visit Page</a>
                 </div>
 
                 <div class="card third">
@@ -230,7 +230,7 @@
                         <img class="project Bronya" src="./img/ProjectBronya.jpg" alt="project1">
                         <p class="projectText"><b>Bronya Zaychik</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/BronyaZaychik/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/Bronya/" >Visit Page</a>
                 </div>
 
                 <div class="card fourth">
@@ -238,7 +238,7 @@
                         <img class="project Hua" src="./img/ProjectHua.jpg" alt="project1">
                         <p class="projectText"><b>Fu Hua</b></p>
                     </section>
-                    <a id="projectbtn" href="https://jeroez.github.io/FuHua/" >Visit Page</a>
+                    <a id="projectbtn" href="https://jeroez.github.io/Fu-Hua/" >Visit Page</a>
                 </div>
 
                 <div class="card fifth">
