--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     
     <section id="Home">
-        <a href="#Entrance">
+        <a href="#Introduction">
             <img src="./img/Door.png" alt="door" class="door">
         </a>
         <img class="Homepic" src="./img/House.png" alt="home pic">        
     </section>
 
-        <section id="Entrance">
+        <!-- <section id="Entrance">
             <a href="#Introduction">
                 <img class="AboutEnt" src="./img/AboutEnt.png" alt="">
             </a>
@@ -48,9 +48,8 @@
                 <img class="Wardrobe" src="./img/wardrobe.png" alt="">
             </a>
 
-            <!--^TP parts above here^-->
             <img class="ent" src="./img/entrance.png" alt="">     
-        </section>
+        </section> -->
 
 
     <div class="Main">
@@ -211,40 +210,40 @@
                 
                 <div class="card first">
                     <section class="inside">
-                        <img class="project kiana" src="./img/ProjectKiana.jpg" alt="project1">
-                        <p class="projectText"><b>Kiana Kaslana</b></p>
+                        <img class="project kiana" src="./img/unavail.png" alt="project1">
+                        <p class="projectText"><b>Unavailable</b></p>
                     </section>
                     <a id="projectbtn" href="https://jeroez.github.io/KianaKaslana/" >Visit Page</a>
                 </div>
 
                 <div class="card second">
                     <section class="inside">
-                        <img class="project Mei" src="./img/ProjectMei.png" alt="project1">
-                        <p class="projectText"><b>Raiden Mei</b></p>
+                        <img class="project Mei" src="./img/unavail.png" alt="project1">
+                        <p class="projectText"><b>Unavailable</b></p>
                     </section>
                     <a id="projectbtn" href="https://jeroez.github.io/Raiden-Mei//" >Visit Page</a>
                 </div>
 
                 <div class="card third">
                     <section class="inside">
-                        <img class="project Bronya" src="./img/ProjectBronya.jpg" alt="project1">
-                        <p class="projectText"><b>Bronya Zaychik</b></p>
+                        <img class="project Bronya" src="./img/unavail.png" alt="project1">
+                        <p class="projectText"><b>Unavailable</b></p>
                     </section>
                     <a id="projectbtn" href="https://jeroez.github.io/Bronya/" >Visit Page</a>
                 </div>
 
                 <div class="card fourth">
                     <section class="inside">
-                        <img class="project Hua" src="./img/ProjectHua.jpg" alt="project1">
-                        <p class="projectText"><b>Fu Hua</b></p>
+                        <img class="project Hua" src="./img/unavail.png" alt="project1">
+                        <p class="projectText"><b>Unavailable</b></p>
                     </section>
                     <a id="projectbtn" href="https://jeroez.github.io/Fu-Hua/" >Visit Page</a>
                 </div>
 
                 <div class="card fifth">
                     <section class="inside">
-                        <img class="project Durandal" src="./img/ProjectBianka.jpg" alt="project1">
-                        <p class="projectText"><b>Durandal</b></p>
+                        <img class="project Durandal" src="./img/unavail.png" alt="project1">
+                        <p class="projectText"><b>Unavailable</b></p>
                     </section>
                     <a id="projectbtn" href="https://jeroez.github.io/Durandal/" >Visit Page</a>
                 </div>
